trying storage and esm update

--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test": "vitest run"
   },
   "main": "./build/main.js",
+  "type": "module",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
     "@types/lodash": "^4.17.16",
     "@types/normalize-path": "^3.0.2",
+    "conf": "^13.1.0",
     "electron": "^35.2.0",
+    "electron-store": "^10.0.1",
     "execa": "^9.5.2",
     "glob": "^11.0.1",
     "lodash": "^4.17.21",
