--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "image randomiser",
   "scripts": {
-    "b": "tsc --project tsconfig-build.json",
+    "d": "electron-vite",
     "r": "electron .",
-    "d": "pnpm b && pnpm r",
     "test": "vitest run"
   },
   "main": "./build/main.js",
@@ -14,6 +13,7 @@
     "@types/lodash": "^4.17.16",
     "@types/normalize-path": "^3.0.2",
     "electron": "^35.2.0",
+    "electron-vite": "^3.1.0",
     "execa": "^9.5.2",
     "glob": "^11.0.1",
     "lodash": "^4.17.21",
