remove parent path from randomitem obj
reset store api

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "d": "electron-vite",
     "r": "electron .",
+    "check": "tsc --noEmit",
     "test": "vitest run"
   },
   "main": "./build/main.js",
