--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "image randomiser",
   "scripts": {
+    "b":"electron-vite build",
     "d": "electron-vite",
     "r": "electron .",
     "check": "tsc --noEmit",
@@ -13,7 +14,6 @@
   "dependencies": {
     "@types/lodash": "^4.17.16",
     "@types/normalize-path": "^3.0.2",
-    "electron": "^35.2.0",
     "electron-vite": "^3.1.0",
     "execa": "^9.5.2",
     "glob": "^11.0.1",
@@ -21,6 +21,10 @@
     "normalize-path": "^3.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.1"
+  },
+  "devDependencies": {
+    "electron": "^35.2.0",
+    "electron-builder": "^26.0.12"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
