--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   "main": "./build/main.js",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
-    "@types/lodash": "^4.17.16",
-    "@types/normalize-path": "^3.0.2",
-    "electron-vite": "^3.1.0",
     "execa": "^9.5.2",
     "glob": "^11.0.1",
     "lodash": "^4.17.21",
-    "normalize-path": "^3.0.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.1"
+    "normalize-path": "^3.0.0"
   },
   "devDependencies": {
+    "vitest": "^3.1.1",
+    "electron-vite": "^3.1.0",
+    "typescript": "^5.8.3",
+    "@types/lodash": "^4.17.16",
+    "@types/normalize-path": "^3.0.2",
     "electron": "^35.2.0",
     "electron-builder": "^26.0.12"
   },
